# SDV_2025_ROS_2

./: .gitmodules  Guía.md  README.md
install/: local_setup.sh  setup.sh
install/sdv_msgs/include/sdv_msgs/sdv_msgs/msg/: batteries.hpp  battery.h  battery.hpp  encoder.h  encoder.hpp  flexiforce.h  four_motors.h  imu_raw.h  led.h  motor_driver.h  panel_button.h  rosidl_generator_cpp__visibility_control.hpp  sdv_platform.hpp  sdv_status.hpp  tag_rfid.hpp  two_motors.hpp  ultrasound.h
install/sdv_msgs/include/sdv_msgs/sdv_msgs/msg/detail/: batteries__builder.hpp  batteries__functions.c  batteries__functions.h  batteries__rosidl_typesupport_fastrtps_c.h  batteries__rosidl_typesupport_fastrtps_cpp.hpp  batteries__rosidl_typesupport_introspection_c.h  batteries__traits.hpp  batteries__type_support.c  battery__builder.hpp  battery__description.c  battery__functions.h  (+108 more)
install/sdv_msgs/share/ament_index/resource_index/rosidl_interfaces/: sdv_msgs
install/sdv_msgs/share/sdv_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sdv_msgs/share/sdv_msgs/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_sdv_msgs__rosidl_generator_cExport-noconfig.cmake  export_sdv_msgs__rosidl_generator_cExport.cmake  export_sdv_msgs__rosidl_generator_cppExport.cmake  export_sdv_msgs__rosidl_generator_pyExport-noconfig.cmake  export_sdv_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_sdv_msgs__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake-extras.cmake  sdv_msgsConfig.cmake  sdv_msgs__rosidl_typesupport_cppExport.cmake  sdv_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/sdv_msgs/share/sdv_msgs/msg/: Buzzer.json  Buzzer.msg  Drivers.msg  Encoder.json  Flexiforce.msg  FourMotors.msg  ImuRaw.idl  ImuRaw.json  LED.idl  LED.msg  MotorDriver.idl  MotorDriver.json  PanelButton.json  PanelButton.msg  SdvPlatform.json  SdvPlatform.msg  SdvStatus.idl  TagRfid.idl  TagRfid.msg  TwoMotors.idl  TwoMotors.msg  Ultrasound.idl  Ultrasound.json
install/sdv_scripts/include/sdv_scripts/sdv_scripts/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/sdv_scripts/share/ament_index/resource_index/parent_prefix_path/: sdv_scripts
install/sdv_scripts/share/ament_index/resource_index/rosidl_interfaces/: sdv_scripts
install/sdv_scripts/share/sdv_scripts/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sdv_scripts/share/sdv_scripts/cmake/: ament_cmake_export_targets-extras.cmake  export_sdv_scripts__rosidl_generator_cppExport.cmake  export_sdv_scripts__rosidl_generator_pyExport.cmake  export_sdv_scripts__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  sdv_scriptsConfig.cmake  sdv_scripts__rosidl_typesupport_cExport-noconfig.cmake  sdv_scripts__rosidl_typesupport_cppExport.cmake  sdv_scripts__rosidl_typesupport_introspection_cExport-noconfig.cmake  sdv_scripts__rosidl_typesupport_introspection_cppExport-noconfig.cmake  sdv_scripts__rosidl_typesupport_introspection_cppExport.cmake
install/sdv_scripts/share/sdv_scripts/msg/: Udp.json  Udp.msg
log/: latest_build
src/: LICENSE
src/sdv_scripts/: CMakeLists.txt  LICENSE  README.md
src/sdv_scripts/launch/: joy_control_launch.py  keyboard_control_launch.py  udp_control_launch.py
src/sdv_scripts/rviz/: config.rviz
src/sdv_scripts/src/: key2twist.py  key_publisher.py  led_tester.py  patrol.py  send2location.py
src/sdv_un_ros/: .gitignore  README.md
src/sdv_un_ros/sdv_joystick/: CMakeLists.txt  README.md  package.xml
src/sdv_un_ros/sdv_joystick/launch/: sdv_joystick.launch  sdv_joystick_launch.py
src/sdv_un_ros/sdv_joystick/src/: sdv_joystick_node.cpp
src/sdv_un_ros/sdv_msgs/: CMakeLists.txt
src/sdv_un_ros/sdv_msgs/msg/: Batteries.msg  Battery.msg  ImuRaw.msg  SdvStatus.msg  Ultrasound.msg
src/sdv_un_ros/sdv_nav/: CMakeLists.txt  package.xml
src/sdv_un_ros/sdv_nav/launch/: .rtab_map.launch.swo  SLAM_mapping_launch.py  amcl.launch  amcl_launch.py  camera.launch  camera_launch.py  hector_mapping.launch  lms1xx.launch  lms1xx_launch.py  move_base.launch  move_base_launch.py  nav_stack.launch  nav_stack_launch.py  rtab_map.launch  rtab_map_launch.py  sdv_nav.launch  sdv_nav_launch.py  startup.launch
src/sdv_un_ros/sdv_nav/maps/: LabFabEx.pgm  LabFabEx.yaml  map_feb12_01_15pm.pgm  map_feb12_01_15pm.yaml
src/sdv_un_ros/sdv_nav/msg/: pcecontrol.msg
src/sdv_un_ros/sdv_nav/params/: nav2_params.yaml  sdv1_params.yaml  sdv2_params.yaml  sdv3_params.yaml  sdv4_params.yaml
src/sdv_un_ros/sdv_nav/rviz/: sdvun_amcl.rviz  sdvun_hector.rviz
src/sdv_un_ros/sdv_nav/scripts/: costmap_cleaner.py  fake_odometry.py  get_param.py  pose_to_tf.py  scan_data_source.sh
src/sdv_un_ros/sdv_nav/src/: odom_slow.py  odom_to_tf.py
src/sdv_un_ros/sdv_platform/: CMakeLists.txt  package.xml
src/sdv_un_ros/sdv_platform/camera_platform/: camera_watcher.py  capture_image.py  udp_capturer.py
src/sdv_un_ros/sdv_platform/src/: camera_window_sample.py  image_recog_tools.py
src/sdv_un_ros/sdv_process/: CMakeLists.txt  package.xml  setup.py
src/sdv_un_ros/sdv_process/firebase_coms/: firebase_launcher.sh
src/sdv_un_ros/sdv_process/launch/: process.launch  process_launch.py
src/sdv_un_ros/sdv_process/src/: firebase_bridge.py  firebase_bridge_A.py  firebase_initializer.py  process_controller.py
src/sdv_un_ros/sdv_serial/: CMakeLists.txt  package.xml
src/sdv_un_ros/sdv_serial/include/: tools.h
src/sdv_un_ros/sdv_serial/include/motor/: four_drive_controller.h  motor.h  two_drive_controller.h
src/sdv_un_ros/sdv_serial/launch/: sdv_serial_launch.py  sdv_serial_test_launch.py
src/sdv_un_ros/sdv_serial/src/: battery.hpp  four_drive_controller.cpp  motor.cpp  sdv_serial_node.cpp  sdv_serial_node111.txt  sdv_serial_node22.cpp  tools.cpp  two_drive_controller.cpp
(+10 files in other folders)
