<?xml version="1.0"?>
<package format="3">
  <name>sdv_msgs</name>
  <version>0.0.1</version>
  <description>The sdv_msgs package</description>
  <author email="jhangaritamo@unal.edu.co">Jhonyfer Angarita Moreno</author>
  <maintainer email="chvargasp@unal.edu.co">Christian Vargas</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>