<?xml version="1.0"?>
<package format="3">
  <name>sdv_scripts</name>
  <version>0.0.1</version>
  <description>The sdv_scripts package for ROS 2.</description>

  <maintainer email="chvargasp@unal.edu.co">jhony</maintainer>
  <license>BSD</license>

  <!-- Use ament_python as the build tool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 Python and message generation dependencies -->
  <depend>rosidl_default_generators</depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Other runtime dependencies -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>sdv_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Recommended test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
